Sidenav CSS and layout issues

--- a/assets/styles/custom-variables.scss
+++ b/assets/styles/custom-variables.scss
@@ -249,10 +249,15 @@ $container-max-widths: (
     --top-bar-color-fg: hsl(0, 0%, 100%);
     --top-bar-color-bg-notifications: hsla(216, 45%, 4%, 0.4);
     --top-bar-color-bg-notifications--hover: hsla(216, 45%, 0%, 0.8);
+    --top-bar-color-fg-notifications: var(--top-bar-color-fg);
+    --top-bar-notifications-inner-size: 32px;
     --top-bar-color-bg-avatar-block: hsla(216, 45%, 4%, 0.4);
     --top-bar-color-fg-avatar: hsl(222, 18%, 100%);
     --top-bar-color-bg-avatar: hsl(222, 18%, 24%);
     --top-bar-color-bg-avatar--hover: hsl(222, 18%, 34%);
+    --top-bar-color-bg-badge: hsl(321, 100%, 42%);
+    --top-bar-color-fg-badge: hsl(0, 0%, 100%);
+    --top-bar-badge-size: 1.25rem;
 
     // COMPONENT: INPUT FIELD
     --input-color-bg: hsl(0, 0%, 96%);
@@ -306,7 +311,7 @@ $container-max-widths: (
     --simplecard-item-padding--compact: var(--space--1) var(--space--1) var(--space--1) var(--space--3);
 
     // COMPONENT: SIDENAV
-    --sidenav-size-width: 80px;
+    
     --sidenav-color-bg:                 var(--color-primary);
     --sidenav-color-item-bg:            transparent;
     --sidenav-color-item-fg:            hsla(0, 0%, 100%, 1);
@@ -314,6 +319,17 @@ $container-max-widths: (
     --sidenav-color-item-fg--active:    var(--color-primary);
     --sidenav-color-badge-bg:           hsla(0, 0%, 16%, 1);
     --sidenav-color-badge-fg:           hsla(0, 0%, 98%, 1);
+    --sidenav-item-badge-size:          1.25rem;
+    --sidenav-item-badge-font-size:     0.6875rem;
+    --sidenav-item-helper-icon-size:    1.125rem;
+    --sidenav-item-border-radius:       var(--border-radius--s);
+    --separator-dot-size:               3px;
+    --separator-dot-color-bg:           var(--sidenav-color-item-fg);
+    // Title and size options
+    --sidenav-item-title-display:       block; // set to none to hide the title
+    --sidenav-size-width:               80px; // width of the sidenav on desktop
+    --sidenav-item-gap:                 8px; // left and right spacing between item and the bar on desktop
+    --sidenav-item-width:               calc(var(--sidenav-size-width) - var(--sidenav-item-gap)); // width of the sidenav item on desktop
 
     // COMPONENT: PROFILE MODAL
     --profile-header-height: 56px;
